Algunos cambios en maquetacion

--- a/src/components/galeria/galeria.component.css
+++ b/src/components/galeria/galeria.component.css
@@ -1,12 +1,26 @@
-.header {
-    height: 120px;
+.fondo{
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    filter: grayscale(1) blur(1px);
+    z-index: -1;
 }
 
-.col-lg-5{
-    height: 300px;
-    border: white 10px solid;
-    box-shadow: rgba(0,0,0,1) 10px 10px 30px 1px;
-    background: black url('https://scontent.xx.fbcdn.net/v/t1.0-0/p320x320/17991247_1705520099465040_7837750952152385250_n.jpg?oh=9dbe6c2232b12d773ec0171296c341b6&oe=5B30B60A') no-repeat center;
+.filtro::after{
+    content: '';
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    z-index: -1;
+}
+
+.header {
+    height: 120px;
 }
 
 .margin{
@@ -14,11 +28,11 @@
 }
 
 .margin-bottom{
-    margin-bottom: 25px;
+    margin-bottom: 0.5%;
 }
 
 .padding-top{
-    padding-top: 45px;
+    padding-top: 3%;
 }
 
 .photo-list{
@@ -43,9 +57,10 @@
 }
 
 .image-on-view{
-    box-shadow: 0px 0px 30px 5px black;
+    border: solid 5px white;
     height: 100%;
     max-width: 100%;
+    filter: drop-shadow(black 0px 0px 5px);
 }
 
 .opacity{
@@ -54,4 +69,8 @@
 
 .active-photo{
     opacity: 1;
+} 
+
+.container-fluid{
+    overflow: hidden;
 }
