--- a/src/components/galeria/galeria.component.html
+++ b/src/components/galeria/galeria.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid animated fadeIn">
-  <div class="row">
-    <img src="assets/imagenes/fondos/Fondo-Galeria.jpg" class="fondo fixed">
+
+  <div class="row filtro">
+    <img src="assets/imagenes/fondos/Fondo-Galeria.jpg" class="fondo">
   </div>
+  
   <!-- toolbar -->
   <div class="row header margin-top">
     <div class="col-lg-1">
@@ -15,14 +17,14 @@
     </div>
   </div>
   <!-- Contenedor de las imagenes -->
-  <div class="row justify-content-md-center padding-top">
+  <div class="row justify-content-center padding-top">
     <div class=" relativo col-lg-10 framework text-center">
       <img src="{{SelectedImage}}" class="image-on-view">
     </div>
   </div>
 
-  <!-- fpreview de fotos-->
-  <div class="row relativo justify-content-md-center align-items-center animated lightSpeedIn">
+  <!-- Preview de fotos-->
+  <div class="row relativo justify-content-center align-items-center animated lightSpeedIn">
     <div class="col-lg-1" *ngIf="Prev_page != null">
       <span class="arrow" (click)="PrevImages()">◄</span>
     </div>
