--- a/src/components/linea-tiempo/linea-tiempo.component.css
+++ b/src/components/linea-tiempo/linea-tiempo.component.css
@@ -9,6 +9,9 @@
     margin-right: -100px;
     padding-right: 100px;
 }
+.header {
+    height: 120px;
+}
 
 .desliza{
     position: absolute;
@@ -23,4 +26,29 @@
 
 .padding{
     padding: 3% 0%;
+}
+
+.fondo{
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    filter: blur(1px);
+    z-index: -1;
+}
+
+.container-fluid{
+    overflow: hidden;
+}
+
+.filtro::after{
+    content: '';
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    z-index: -1;
 }
