--- a/src/components/linea-tiempo/linea-tiempo.component.html
+++ b/src/components/linea-tiempo/linea-tiempo.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid animated fadeIn">
 
-  <div class="row">
-    <img src="assets/imagenes/fondos/Fondo-Linea.jpg" class="fondo fixed">
+  <div class="row filtro">
+    <img src="assets/imagenes/fondos/Fondo-Linea.jpg" class="full-width fondo">
   </div>
 
   <!-- toolbar -->
