--- a/src/components/menu/menu.component.css
+++ b/src/components/menu/menu.component.css
@@ -1,13 +1,87 @@
-.no-margin{
-    margin: 0;
+.container-fluid{
+    overflow: hidden;
 }
 
-.no-padding{
-    padding: 0;
+.col-lg-12{
+    padding: 0 !important;
+}
+
+.fondo{
+    width: 100%;
+    min-width: 100%;
+    height: 34em;
+    max-height: 34em;
+    position: relative;
+    filter: blur(1px);
+}
+
+.filter::after{
+    content: '';
+    background: rgba(0,0,0,0.45);
+    width: 100%;
+    height: 34em;
+    position: absolute;
+}
+
+.logo{
+    position: absolute;
+    width: 50%;
+    min-width: 50%;
+    top: 5%;
+    z-index: 1;
+}
+
+.caja-botones{
+    box-shadow: 0px -10px 10px 15px rgba(0,0,0,1) ;
 }
 
 .boton-menu{
+    height: 20em;
+    min-height: 20em;
     border-left: solid black 0.5px;
     border-right: solid black 0.5px;
     box-shadow: -5px 5px 40px 3px rgba(0,0,0,1);
+}
+
+.icono-btn{
+    width: 100%;
+    max-width: 100%;
+    filter: drop-shadow(rgba(0,0,0,0.5) 3px 5px );
+} 
+
+
+.texto-btn{
+    background: rgba(0,0,0,0.1);
+    text-align: center;
+    font-family: 'Impact';
+    font-size: 250%;
+    width: 100%;
+    color: white;
+    position: absolute;
+    top: 80%;
+    filter: drop-shadow(rgba(0,0,0,0.5) 3px 5px );
+}
+
+.fondo-btn{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    min-width: 100%;
+    height:100%;
+}
+
+#historia{
+    background: linear-gradient(to bottom left, rgba(255,192,0,1),transparent);
+}
+
+#mapa{
+    background: linear-gradient(to bottom left, rgba(238,122,0,1),transparent);
+}
+
+#galeria{
+    background: linear-gradient(to bottom left, rgba(118,61,6,1),transparent);
+}
+
+#eventos{
+    background: linear-gradient(to bottom left, rgba(118,4,4,1),transparent);
 }
