--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -1,19 +1,52 @@
 <div class="container-fluid animated fadeIn">
-  <div class="row">
+  <div class="row filter justify-content-center">
     <img src="assets/imagenes/fondos/Banner-Menu.jpg" class="fondo">
+    <img src="assets/imagenes/logo/Logo-Monumental.png"class="logo">
   </div>
-  <div class="row">
-    <div class="col-3 no-margin no-padding" [routerLink]="['historia']">
-      <img src="assets/imagenes/iconos/Boton-Historia.png" class="fondo boton-menu" height="{{Height}}">
+  <div class="row caja-botones">
+    <div class="col-lg-3 no-margin no-padding boton-menu" id="historia" [routerLink]="['historia']">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Historia.jpg"  class="fondo-btn">
+          <img src="assets/imagenes/iconos/Icono-Historia.png" class="icono-btn">
+        </div>
+        <span class="texto-btn">
+          Línea de tiempo
+        </span>
+      </div>
     </div>
-    <div class="col-3 no-margin no-padding" [routerLink]="['mapa']">
-      <img src="assets/imagenes/iconos/Boton-Mapa.png" class="fondo boton-menu" height="{{Height}}">
+    <div class="col-lg-3 no-margin no-padding boton-menu" id="mapa" [routerLink]="['mapa']">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Galeria.jpg" class="fondo-btn">
+          <img src="assets/imagenes/iconos/Icono-Mapa.png" class="icono-btn">
+        </div>
+        <span class="texto-btn">
+          Mapa Interactivo
+        </span>
+      </div>
     </div>
-    <div class="col-3 no-margin no-padding" [routerLink]="['galeria']">
-      <img src="assets/imagenes/iconos/Boton-Galeria.png" class="fondo boton-menu" height="{{Height}}" >
+    <div class="col-lg-3 no-margin no-padding boton-menu" id="galeria" [routerLink]="['galeria']">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Galeria.jpg" class="fondo-btn">
+          <img src="assets/imagenes/iconos/Icono-Galeria.png" class="icono-btn">
+        </div>
+        <span class="texto-btn">
+          Galería fotográfica
+        </span>
+      </div>
     </div>
-    <div class="col-3 no-margin no-padding" [routerLink]="['eventos']">
-      <img src="assets/imagenes/iconos/Boton-Eventos.png" class="fondo boton-menu" height="{{Height}}">
+    <div class="col-lg-3 no-margin no-padding boton-menu" id="eventos" [routerLink]="['eventos']">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Eventos.jpg" class="fondo-btn">
+          <img src="assets/imagenes/iconos/Icono-Eventos.png" class="icono-btn">
+        </div>
+        <span class="texto-btn">
+          Próximos eventos
+        </span>
+      </div>
     </div>
   </div>
 </div>
