--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import "~angular-vertical-timeline/dist/vertical-timeline.css";
  
 
-.fondo{
+.full-width{
     width: 100%;
 }
 
@@ -37,7 +37,13 @@
 
 .titulo-vista{
     padding: 1% 0% 0 0; 
-    background: rgba(90, 50, 5, 0.3);
+    background: rgba(0, 0, 0, 0.3);
 }
 
+.no-margin{
+    margin: 0;
+}
 
+.no-padding{
+    padding: 0;
+}
