--- a/src/components/linea-tiempo/linea-tiempo.component.scss
+++ b/src/components/linea-tiempo/linea-tiempo.component.scss
@@ -3,9 +3,9 @@
 }
 
 .viewport {
-    margin-top: 0%;
     overflow: auto;
-    max-height: 728px;
+    margin-top: 0%;
+    max-height: 729px;
     margin-right: -100px;
     padding-right: 100px;
 }
@@ -34,7 +34,7 @@
     min-width: 100%;
     min-height: 100%;
     position: absolute;
-    filter: blur(1px);
+    filter: blur(1.5px) grayscale(0.5);
     z-index: -1;
 }
 
@@ -44,11 +44,21 @@
 
 .filtro::after{
     content: '';
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.6);
     width: 100%;
     height: 100%;
     min-width: 100%;
     min-height: 100%;
     position: absolute;
     z-index: -1;
+}
+
+vertical-timeline-card .img-suceso{
+    width: 100%;
+    height: 100%;
+}
+
+vertical-timeline-card .icono-sonido{
+    padding-top: 3%;
+    width: 10%;
 }
