--- a/src/components/menu/menu.component.scss
+++ b/src/components/menu/menu.component.scss
@@ -13,6 +13,7 @@
     max-height: 34em;
     position: relative;
     filter: blur(1px);
+    z-index: -1;
 }
 
 .filter::after{
@@ -32,7 +33,7 @@
 }
 
 .caja-botones{
-    box-shadow: 0px -10px 10px 15px rgba(0,0,0,1) ;
+    box-shadow: 0px -10px 20px 1px rgba(0,0,0,0.8) ;
 }
 
 .boton-menu{
