--- a/src/components/linea-tiempo/linea-tiempo.component.scss
+++ b/src/components/linea-tiempo/linea-tiempo.component.scss
@@ -4,31 +4,27 @@
 
 .viewport {
     overflow: auto;
-    margin-top: 0%;
-    max-height: 729px;
+    max-height: 743px;
     margin-right: -100px;
     padding-right: 100px;
 }
-.header {
-    height: 120px;
-}
 
-.desliza{
+.desliza {
     position: absolute;
     top: 10%;
     right: 0%;
     z-index: 1;
 }
 
-.img-desliza{
+.img-desliza {
     width: 50%;
 }
 
-.padding{
+.padding {
     padding: 3% 0%;
 }
 
-.fondo{
+.fondo {
     width: 100%;
     height: 100%;
     min-width: 100%;
@@ -38,13 +34,13 @@
     z-index: -1;
 }
 
-.container-fluid{
+.container-fluid {
     overflow: hidden;
 }
 
-.filtro::after{
+.filtro::after {
     content: '';
-    background: rgba(0,0,0,0.6);
+    background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
     min-width: 100%;
@@ -53,12 +49,12 @@
     z-index: -1;
 }
 
-vertical-timeline-card .img-suceso{
+vertical-timeline-card .img-suceso {
     width: 100%;
     height: 100%;
 }
 
-vertical-timeline-card .icono-sonido{
+vertical-timeline-card .icono-sonido {
     padding-top: 3%;
     width: 10%;
 }
