--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -1,17 +1,17 @@
-<div class="container-fluid animated fadeIn">
+<div class="container-fluid">
   <div class="row filter justify-content-center">
     <img src="assets/imagenes/fondos/Banner-Menu.jpg" class="fondo">
     <img src="assets/imagenes/logo/Logo-Monumental.png"class="logo">
   </div>
   <div class="row caja-botones">
-    <div class="col-lg-3 no-margin no-padding boton-menu" id="historia" [routerLink]="['historia']">
+    <div class="col-lg-3 no-margin no-padding boton-menu" id="historia" [routerLink]="['llegar']">
       <div class="row">
         <div class="col-lg-12">
-          <img src="assets/imagenes/fondos/Fondo-Boton-Historia.jpg"  class="fondo-btn">
-          <img src="assets/imagenes/iconos/Icono-Historia.png" class="icono-btn">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Llegar.jpg"  class="fondo-btn">
+          <img src="assets/imagenes/iconos/Icono-Llegar.png" class="icono-btn">
         </div>
         <span class="texto-btn">
-          Línea de tiempo
+          ¿Cómo llegar?
         </span>
       </div>
     </div>
