--- a/src/components/como-llegar/como-llegar.component.html
+++ b/src/components/como-llegar/como-llegar.component.html
@@ -30,7 +30,7 @@
       <div class="card text-white text-left mt-3 mb-3" (click)="TrazarRuta(21.8759791,-102.3051812,$event)">
         <img class="img-fluid" src="assets/imagenes/fondos/Fondo-Mapa-Expo.jpg">
         <div class="card-img-overlay">
-          <h5 class="card-title sideL">Expo Plaza</h5>
+          <h5 class="card-title sideL">Centro comercial <br>Expoplaza</h5>
         </div>
       </div>
 
