--- a/src/components/galeria/galeria.component.html
+++ b/src/components/galeria/galeria.component.html
@@ -34,13 +34,13 @@
     </div>
     <div class="col-lg-9 text-left titulo-vista">
       <img src="assets/imagenes/iconos/impresora.png" class="impresora-icon" (click)="isPrinting = !isPrinting">
-      <span class="texto-blanco font-36">Galeria Fotográfica</span>
+      <span class="texto-blanco font-36">Galería Fotográfica</span>
     </div>
   </div>
 
   <!-- Contenedor de las imagenes -->
-  <div class="row justify-content-center padding-top">
-    <div class=" relativo col-lg-10 framework text-center">
+  <div class="row justify-content-center pt-5">
+    <div class="col-lg-10 framework text-center">
       <img src="{{SelectedImage}}" class="image-on-view">
     </div>
   </div>
@@ -57,4 +57,4 @@
       <span class="arrow" (click)="NextImages()">►</span>
     </div>
   </div>
-  <div>
+</div>
