--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row filter justify-content-center">
-    <img src="assets/imagenes/fondos/Banner-Menu.jpg" class="fondo">
+    <img src="assets/imagenes/fondos/Banner-Corridas.jpg" class="fondo">
     <img src="assets/imagenes/logo/Logo-Monumental.png"class="logo">
   </div>
   <div class="row caja-botones">
-    <div class="col-lg-3 no-margin no-padding boton-menu" id="historia" [routerLink]="['llegar']">
+    <div class="col-lg-3 boton-menu p-0" id="historia" [routerLink]="['llegar']">
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Llegar.jpg"  class="fondo-btn">
@@ -15,10 +15,10 @@
         </span>
       </div>
     </div>
-    <div class="col-lg-3 no-margin no-padding boton-menu" id="mapa" [routerLink]="['mapa']">
+    <div class="col-lg-3 p-0 boton-menu" id="mapa" [routerLink]="['mapa']">
       <div class="row">
         <div class="col-lg-12">
-          <img src="assets/imagenes/fondos/Fondo-Boton-Galeria.jpg" class="fondo-btn">
+          <img src="assets/imagenes/fondos/Fondo-Boton-Mapa.jpg" class="fondo-btn">
           <img src="assets/imagenes/iconos/Icono-Mapa.png" class="icono-btn">
         </div>
         <span class="texto-btn">
@@ -26,7 +26,7 @@
         </span>
       </div>
     </div>
-    <div class="col-lg-3 no-margin no-padding boton-menu" id="galeria" [routerLink]="['galeria']">
+    <div class="col-lg-3 p-0 boton-menu" id="galeria" [routerLink]="['galeria']">
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Galeria.jpg" class="fondo-btn">
@@ -37,7 +37,7 @@
         </span>
       </div>
     </div>
-    <div class="col-lg-3 no-margin no-padding boton-menu" id="eventos" [routerLink]="['eventos']">
+    <div class="col-lg-3 p-0 boton-menu" id="eventos" [routerLink]="['eventos']">
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Eventos.jpg" class="fondo-btn">
