--- a/src/components/galeria/galeria.component.scss
+++ b/src/components/galeria/galeria.component.scss
@@ -1,10 +1,8 @@
 .fondo{
     width: 100%;
     height: 100%;
-    min-width: 100%;
-    min-height: 100%;
     position: absolute;
-    filter: grayscale(1) blur(1px);
+    filter: grayscale(1);
     z-index: -1;
 }
 
@@ -13,22 +11,8 @@
     background: rgba(0,0,0,0.5);
     width: 100%;
     height: 100%;
-    min-width: 100%;
-    min-height: 100%;
     position: absolute;
     z-index: -1;
-}
-
-.margin{
-    margin: 0 25px 0 75px; 
-}
-
-.margin-bottom{
-    margin-bottom: 0.5%;
-}
-
-.padding-top{
-    padding-top: 3%;
 }
 
 .arrow{
@@ -42,16 +26,13 @@
 }
 
 .framework{
-    position: relative;
     height: 500px;
-    margin-bottom: 20px;
 }
 
 .image-on-view{
-    position: relative;
     border: solid 5px white;
     height: 100%;
-    max-width: 100%;
+    min-width: 100%;
     filter: drop-shadow(black 0px 0px 5px);
 }
 
