--- a/src/components/menu/menu.component.scss
+++ b/src/components/menu/menu.component.scss
@@ -2,32 +2,22 @@
     overflow: hidden;
 }
 
-.caja-botones .col-lg-12{
-    padding: 0 !important;
-}
-
 .fondo{
     width: 100%;
-    min-width: 100%;
     height: 34em;
-    max-height: 34em;
-    position: relative;
-    filter: blur(1px);
-    z-index: -1;
 }
 
 .filter::after{
     content: '';
-    background: rgba(0,0,0,0.45);
+    background: rgba(0,0,0,0.35);
     width: 100%;
-    height: 34em;
+    height: 100%;
     position: absolute;
 }
 
 .logo{
+    width: 45%;
     position: absolute;
-    width: 50%;
-    min-width: 50%;
     top: 5%;
     z-index: 1;
 }
@@ -38,7 +28,6 @@
 
 .boton-menu{
     height: 20em;
-    min-height: 20em;
     border-left: solid black 0.5px;
     border-right: solid black 0.5px;
     box-shadow: -5px 5px 40px 3px rgba(0,0,0,1);
@@ -46,7 +35,6 @@
 
 .icono-btn{
     width: 100%;
-    max-width: 100%;
     filter: drop-shadow(rgba(0,0,0,0.5) 3px 5px );
 } 
 
@@ -67,7 +55,6 @@
     position: absolute;
     z-index: -1;
     width: 100%;
-    min-width: 100%;
     height:100%;
 }
 
