--- a/src/components/menu/menu.component.html
+++ b/src/components/menu/menu.component.html
@@ -5,45 +5,45 @@
   </div>
   <div class="row caja-botones">
     <div class="col-lg-3 boton-menu p-0" id="historia" [routerLink]="['llegar']">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Llegar.jpg"  class="fondo-btn">
           <img src="assets/imagenes/iconos/Icono-Llegar.png" class="icono-btn">
         </div>
-        <span class="texto-btn">
+        <span class="texto-btn text-center">
           ¿Cómo llegar?
         </span>
       </div>
     </div>
     <div class="col-lg-3 p-0 boton-menu" id="mapa" [routerLink]="['mapa']">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Mapa.jpg" class="fondo-btn">
           <img src="assets/imagenes/iconos/Icono-Mapa.png" class="icono-btn">
         </div>
-        <span class="texto-btn">
+        <span class="texto-btn text-center">
           Mapa Interactivo
         </span>
       </div>
     </div>
     <div class="col-lg-3 p-0 boton-menu" id="galeria" [routerLink]="['galeria']">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Galeria.jpg" class="fondo-btn">
           <img src="assets/imagenes/iconos/Icono-Galeria.png" class="icono-btn">
         </div>
-        <span class="texto-btn">
+        <span class="texto-btn text-center">
           Galería fotográfica
         </span>
       </div>
     </div>
     <div class="col-lg-3 p-0 boton-menu" id="eventos" [routerLink]="['eventos']">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-12">
           <img src="assets/imagenes/fondos/Fondo-Boton-Eventos.jpg" class="fondo-btn">
           <img src="assets/imagenes/iconos/Icono-Eventos.png" class="icono-btn">
         </div>
-        <span class="texto-btn">
+        <span class="texto-btn text-center">
           Próximos eventos
         </span>
       </div>
