--- a/src/components/eventos-menu/eventos-menu.component.html
+++ b/src/components/eventos-menu/eventos-menu.component.html
@@ -15,14 +15,14 @@
     </div>
   </div>
 
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col">
-        <img src="assets/imagenes/fondos">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col fondo-corridas mr-3" [routerLink]="['lista-eventos',{tipo:2,pagina:1}]">
+        <h1 class="text-white">Corridas de Toros</h1>
       </div>
-      <div class="col"></div>
+      <div class="col fondo-eventosM ml-3" [routerLink]="['lista-eventos',{tipo:1,pagina:1}]">
+        <h1 class="text-white">Eventos Musicales</h1>
+      </div>
     </div>
   </div>
-
-
 </div>
