--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.scss'; 
-@import "~angular-vertical-timeline/dist/vertical-timeline.scss";
- 
-
-
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+div,ul,li,h1,h2,h3,h4,h5,h6,span,p,input,button,a,.btn,.container > *{
+    transition: all 500ms;
+}
 .texto-blanco{
     color: white;
 }
 
 .font-36{
-    font-size: 36pt;
-}
-
-body{
-    font-family: "LemonMilk";
+    font-size: 34pt;
 }
 
 .titulo-vista{
@@ -23,3 +19,7 @@ body{
 .atras{
     padding: 0% 10%;
 }
+
+.container-fluid{
+    font-family: 'Lemon/Milk';
+}   
