--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.scss'; 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-div,ul,li,h1,h2,h3,h4,h5,h6,span,p,input,button,a,.btn,.container > *{
+div,ul,li,h1,h2,h3,h4,h5,h6,span,p,input,button,a,.btn,img,.container > *{
     transition: all 500ms;
 }
 .texto-blanco{
