--- a/src/components/proceso-compra/proceso-compra.component.html
+++ b/src/components/proceso-compra/proceso-compra.component.html
@@ -17,40 +17,62 @@
 
   <div class="row" *ngIf="pasoCompra == 1" id="paso1">
     <div class="col-sm-6">
-      <img src="assets/imagenes/fondos/Mapa-Plaza-Media.png" class="w-75 mapa" *ngIf="evento.tipo == 1">
-      <img src="assets/imagenes/fondos/Mapa-Plaza2.png" class="w-75 mapa" *ngIf="evento.tipo == 2">
+      <img src="assets/imagenes/fondos/{{mapa}}" class="w-75 mapa">
     </div>
     <div class="col-sm-6 justify-content-center align-items-center p-5">
       <div id="sw-sombra" *ngIf="evento.tipo == 2">
         <label class="switch">
-          <input type="checkbox" [(ngModel)]="sombra">
+          <input type="checkbox" [(ngModel)]="sol" (change)="cambioMapa(check)" #check>
           <span class="slider round"></span>
         </label>
-        <h3>{{sombra?'Sombra':'Sol'}}</h3>
+        <h3>{{!sol?'Sombra':'Sol'}}</h3>
       </div>
 
-      <button class="btn btn-block palcos" id="palcos" (click)="seleccionarZona(1,btnPalcos)" #btnPalcos>
+      <button class="btn btn-block Palcos" id="Palcos" (click)="seleccionarZona(1,btnPalcos)" #btnPalcos>
         <span class="texto"> Palcos</span>
       </button>
-      <button class="btn btn-block barrera" id="barrera" (click)="seleccionarZona(2,btnBarrera)" #btnBarrera>
+      <button class="btn btn-block Barrera" id="Barrera" (click)="seleccionarZona(2,btnBarrera)" #btnBarrera>
         <span class="texto"> Barrera</span>
       </button>
-      <button class="btn btn-block tendido" id="tendido" (click)="seleccionarZona(3,btnTendido)" #btnTendido>
+      <button class="btn btn-block Tendido" id="Tendido" (click)="seleccionarZona(3,btnTendido)" #btnTendido>
         <span class="texto"> Tendido</span>
       </button>
-      <button class="btn btn-block platea" id="platea" (click)="seleccionarZona(4,btnPlatea)" #btnPlatea>
+      <button class="btn btn-block Platea" id="Platea" (click)="seleccionarZona(4,btnPlatea)" #btnPlatea>
         <span class="texto"> Platea</span>
       </button>
-      <button class="btn btn-block general" id="general" (click)="seleccionarZona(5,btnGeneral)" #btnGeneral>
+      <button class="btn btn-block General" id="General" (click)="seleccionarZona(5,btnGeneral)" #btnGeneral>
         <span class="texto"> General</span>
       </button>
     </div>
   </div>
 
-  <div class="row justify-content-center" *ngIf="pasoCompra == 2" id="paso2">
+  <div class="row justify-content-center"  *ngIf="pasoCompra == 2" id="paso2">
+    <div class="col-sm-6 text-center">
+      <img src="assets/imagenes/fondos/Barrera-Filas.png" alt="" class="w-75">
+    </div>
+    <div class="col-sm-6">
+      <ul class="lista-secciones">
+        <li class="item-seccion" *ngFor="let fila of listaFilas" (click)="seleccionarFila(fila,liSec)" #liSec>{{fila}}</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row justify-content-center" *ngIf="pasoCompra == 3" id="paso3">
+    <div class="col-sm-6 text-center">
+      <img src="assets/imagenes/fondos/{{mapa}}" class="w-75 mapa">
+    </div>
+    <div class="col-sm-6">
+      <ul class="lista-secciones">
+        <li class="item-seccion" *ngFor="let seccion of secciones" (click)="selecccionaSeccion(seccion,liSec)" #liSec>{{seccion}}</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row justify-content-center" *ngIf="pasoCompra == 4" id="paso3">
     <div class="col-sm-10 p-5">
       <ul class="listaCantidad">
-        <li class="itemCantidad" *ngFor="let cantidad of listaCantidad" (click)="seleccionarCantidad(cantidad,li)" #li>
+        <li class="itemCantidad" [ngClass]="{'noDisponible':cantidad > asientosDisponibles}" *ngFor="let cantidad of listaCantidad"
+          (click)="seleccionarCantidad(cantidad,li)" #li>
           <img src="assets/imagenes/iconos/ticket.png" class="w-100">
           <span>
             {{cantidad}}
@@ -62,31 +84,42 @@
     </div>
   </div>
 
-  <div class="row justify-content-center" *ngIf="pasoCompra == 3" id="paso3">
-
+  <div class="row justify-content-center" *ngIf="pasoCompra==5" id="paso4">
+    <div class="col-sm-12">
+      <!-- <img src="assets/imagenes/fondos/{{seccionImg}}" alt="" class="w-100"> -->
+      <ul class="lista-asientos">
+        <li class="asiento-item" *ngFor="let asiento of listaAsientos" [ngClass]="{'noDisponible':asiento.ocupado}" (click)="seleccionarAsiento(asiento,liAsiento)" #liAsiento>{{asiento.num_asiento}}</li>
+      </ul>
+    </div>
   </div>
 
-  <div class="row justify-content-center" *ngIf="pasoCompra == 4" id="paso4">
+  <div class="row justify-content-center" *ngIf="pasoCompra == 6" id="paso5">
     <div class="row justify-content-center">
-      <div class="col-sm-5 ">
+      <div class="col-sm-6">
         <img src="assets/imagenes/eventos/{{evento.imagen}}" class="w-100">
       </div>
     </div>
-    <div class="col-sm-5 p-5 text-right text-white  ">
+    <div [ngClass]="{'col-sm-6': evento.tipo == 1,'col-sm-3': evento.tipo == 2}" class="text-right text-white">
       <h2>Zona:</h2>
+      <h2 *ngIf="tipo_zona!=5">Asiento(s):</h2>
       <h2>Precio unitario:</h2>
       <h2>Cantidad boletos:</h2>
       <h1>Total:</h1>
     </div>
-    <div class="col-sm-5 p-5 text-left text-white">
+    <div [ngClass]="{'col-sm-6': evento.tipo == 1,'col-sm-3': evento.tipo == 2}" class="text-left text-white">
       <h2>{{zonasTxt[tipo_zona-1]}}</h2>
+      <h2 *ngIf="cantidadTickets>1 && tipo_zona!=5">
+        <ul>
+          <li class="num-asiento" *ngFor="let asiento of asientosSelected">{{asiento.num_asiento}}</li>
+        </ul>
+      </h2>
       <h2>$ {{asiento.zona.costo | number:'1.2-2'}}</h2>
       <h2>{{cantidadTickets}}</h2>
       <h1>$ {{cantidadTickets*asiento.zona.costo | number:'1.2-2'}}</h1>
     </div>
   </div>
 
-  <div class="row justify-content-center" *ngIf="pasoCompra==5" id="paso5">
+  <div class="row justify-content-center" *ngIf="pasoCompra==7" id="paso6">
     <div class="col-sm-8 text-center" *ngIf="estado==1">
       <img src="assets/imagenes/iconos/terminal.png" class="w-50">
       <h1 class="text-white">Inserte su tarjeta en la terminal</h1>
@@ -100,9 +133,14 @@
       <i class="fa fa-check animated zoomIn"></i>
       <h1 class="text-white">Pago realizado exitosamente</h1>
     </div>
+    <div class="col-sm-6 text-center" *ngIf="estado==5">
+      <div class="loader loader2"></div>
+      <h1 class="text-white">Imprimiendo tickets</h1>
+      <h1 class="text-white">{{impresos}}/{{cantidadTickets}}</h1>
+    </div>
   </div>
 
-  <div class="row justify-content-center" *ngIf="pasoCompra<5">
+  <div class="row justify-content-center" *ngIf="pasoCompra<=6">
     <div class="col-sm-6 text-left pl-5">
       <button class="btn btn-warning w-50" (click)="pasoAnterior()" *ngIf="pasoCompra > 1">
         <div class="row">
@@ -114,13 +152,13 @@
       </button>
     </div>
     <div class="col-sm-6 text-right pr-5">
-      <button class="btn btn-warning w-50" [ngClass]="{'btn-danger':pasoCompra==4}" (click)="siguientePaso()">
+      <button class="btn btn-warning w-50" [ngClass]="{'btn-danger':pasoCompra==6}" (click)="siguientePaso()">
         <div class="row">
-          <div class="col-sm-8" *ngIf="pasoCompra < 4">Continuar</div>
-          <div class="col-sm-4" *ngIf="pasoCompra < 4" id="flecha-adelante">
+          <div class="col-sm-8" *ngIf="pasoCompra < 6">Continuar</div>
+          <div class="col-sm-4" *ngIf="pasoCompra < 6" id="flecha-adelante">
             <img src="assets/imagenes/iconos/atras.png" class="w-25">
           </div>
-          <div class="col-sm-12 text-center" *ngIf="pasoCompra == 4">Finalizar compra</div>
+          <div class="col-sm-12 text-center" *ngIf="pasoCompra == 6">Finalizar compra</div>
         </div>
       </button>
     </div>
